test/types/scalar/kbrady/uint_uint16.chpl
writeln(safe_cast(uint(16), min(uint(64))));
writeln(safe_cast(uint(16), 1:uint(64)));
writeln(safe_cast(uint(16), max(uint(64))));
